# AugView

./: .gitignore  README.md  pyproject.toml  requirements.txt
augview/: __init__.py  cli.py  core.py  server.py  transforms.py
augview/frontend/: index.html  package-lock.json  package.json  vite.config.js
augview/frontend/src/: App.jsx  index.css
augview/frontend/src/components/: ImageLightbox.jsx  ImageUpload.jsx  ParameterPanel.jsx  PipelineGraph.jsx  StepPreview.jsx
augview/frontend/src/components/edges/: AnimatedEdge.jsx
augview/frontend/src/components/nodes/: OutputNode.jsx  SourceImageNode.jsx  TransformNode.jsx
examples/: basic_usage.py  custom_transform.py  decorator_example.py  torchvision_example.py
